--- a/index.html
+++ b/index.html
@@ -4,8 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nike Shoes</title>
-</head>
-<body>
+  </head>
+  <body>
+    <header class="border vh-100 custom-bg">
+        <!-- navbar design start -->
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <div class="me-auto">
+              <a class="navbar-brand d-flex align-items-center" href="#">
+                  <img src="images/icons/Logo.png" alt="Logo" style="height: 40px; margin-right: 10px;">
+                  Nike Shoes
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+          </div>
+          <div>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav ms-auto mb-2 mb-lg-0 d-flex justify-content-around w-100">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Product</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">About US</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Contact US</a>
+                    </li>
+                  </ul>
+                </div>
+          </div>
+        </div>
+      </nav>
+      <!-- navbar design ends -->
     
 </body>
 </html>
